# maxent

./: .clang-tidy  CMakeLists.txt  CONTRIBUTING.md  Dockerfile  Jenkinsfile  LICENSE.txt  README.md  requirements.txt
.github/ISSUE_TEMPLATE/: bug.md
.github/workflows/: build.yml  publish-to-pypi.yml
cmake/: run_python_test.cmake  sitecustomize.py  triqs_add_python_test_coverage.cmake
doc/: CMakeLists.txt  ChangeLog.md  about.rst  changelog.rst  conf.py.in  conf_notriqs.py.in  contents.rst  documentation.rst  index.rst  install.rst  issues.rst  prb_maxent.bib  versions.rst
doc/_templates/: sideb.html
doc/basicnotions/: concepts.rst  mathematics.rst  maxentflavors.rst  shoulders_giants.rst
doc/faqs/: faqs.rst
doc/guide/: blockgf.rst  customization.rst  elementwise.rst  preblur.rst  preblur_example.py  program_overview.rst  sigma_continuator.rst  srvo3.rst  tau_maxent.rst  visualization.rst
doc/guide/elementwise/: elementwise_example.py
doc/guide/sro/: Sr2RuO4_b37.h5  sigma_continuator_SRO_1.py  sigma_continuator_SRO_2.py
doc/guide/srvo3/: srvo3_analysis.py  srvo3_run.py
doc/guide/tau_maxent/: tau_maxent_example.py
doc/reference/: alpha_meshes.rst  cost_functions.rst  default_models.rst  elementwise_maxent.rst  functions.rst  kernels.rst  logtaker.rst  maxent_loop.rst  maxent_result.rst  maxent_util.rst  omega_meshes.rst  plot_utils.rst  preblur.rst  probabilities.rst  sigma_continuator.rst  tau_maxent.rst
doc/reference/analyzers/: analyzer.rst  analyzers.rst
doc/reference/minimizers/: convergence_methods.rst  levenberg_minimizer.rst  minimizer.rst
packaging/: CMakeLists.txt  TRIQS-triqs_maxent-foss-2021b.eb.in
packaging/conda/: meta.yaml.in
packaging/pypi/: pyproject.toml.in
python/: CMakeLists.txt  alpha_meshes.py  default_models.py  elementwise_maxent.py  functions.py  kernels.py  logtaker.py  maxent_loop.py  maxent_result.py  maxent_util.py  omega_meshes.py  plot_utils.py  preblur.py  probabilities.py  sigma_continuator.py  tau_maxent.py  triqs_support.py.in  version.py.in
python/analyzers/: __init__.py  analyzer.py  bryan_analyzer.py  chi2_curvature_analyzer.py  classic_analyzer.py  entropy_analyzer.py  linefit_analyzer.py
python/cost_functions/: __init__.py  bryan_cost_function.py  cost_function.py  maxent_cost_function.py
python/minimizers/: __init__.py  convergence_methods.py  levenberg_minimizer.py  minimizer.py
python/plot/: __init__.py  jupyter_plot_maxent.py  plot_maxent.py
python/triqs_maxent/: CMakeLists.txt  __init__.py  elementwise_maxent.py  functions.py  kernels.py  maxent_util.py  omega_meshes.py  sigma_continuator.py  tau_maxent.py  test_util.py  triqs_support.py.in
python/triqs_maxent/analyzers/: bryan_analyzer.py  chi2_curvature_analyzer.py  classic_analyzer.py
python/triqs_maxent/cost_functions/: bryan_cost_function.py
python/triqs_maxent/minimizers/: __init__.py  convergence_methods.py  levenberg_minimizer.py  minimizer.py
python/triqs_maxent/plot/: __init__.py  jupyter_plot_maxent.py  plot_maxent.py
share/: replace_and_rename.py
share/cmake/: CMakeLists.txt  triqs_maxent-config.cmake.in
shells/: CMakeLists.txt  plot_maxent.bash.in  pytriqs-coverage.sh.in
test/: CMakeLists.txt
test/python/: Basic.py  CMakeLists.txt  G_tau_from_A_w.py  G_w_from_A_w.py  alpha_meshes.py  alpha_meshes.ref  analyzers.py  analyzers.ref.h5  bryan_cost_function.py  cached_view.py  complex_A.py  complex_elementwise_maxent.py  cov.py  default_models.py  elementwise_g_tau.npz  elementwise_maxent.py  elementwise_set_G.py  functions_different_grid.py  huge_alpha.py  logtaker.dat.ref  logtaker.py  logtaker.ref  matplotlibrc  matrix_maxent_result.py  maxent_cost_function_d.py  maxent_cost_function_lazy.py  maxent_loop.py  maxent_result.py  maxent_result.ref.h5  minimizer_circlefun.py  minimizer_cubefun.py  minimizer_sin.py  omega_meshes.py  omega_meshes.ref  pickle_maxent_result.py  plus_minus_entropy.py  set_G_tau.py  set_G_tau_complex_matrix.py  sigma_continuation.py  srvo3_mesh_and_ALPS.py  (+4 more)
